--- a/notebooks/symk_usage.ipynb
+++ b/notebooks/symk_usage.ipynb
@@ -9,7 +9,7 @@
    "source": [
     "import sys\n",
     "import unified_planning as up\n",
-    "import up_fast_downward\n",
+    "import up_symk\n",
     "from unified_planning.shortcuts import *\n",
     "from unified_planning.io import PDDLReader"
    ]
