--- a/notebooks/symk_usage.ipynb
+++ b/notebooks/symk_usage.ipynb
@@ -46,7 +46,7 @@
      "text": [
       "\u001b[96m\u001b[1mNOTE: To disable printing of planning engine credits, add this line to your code: `up.shortcuts.get_environment().credits_stream = None`\n",
       "\u001b[0m\u001b[96m  *** Credits ***\n",
-      "\u001b[0m\u001b[96m  * In operation mode `OneshotPlanner` at line 3 of `/tmp/ipykernel_23888/4014978636.py`, \u001b[0m\u001b[96myou are using the following planning engine:\n",
+      "\u001b[0m\u001b[96m  * In operation mode `OneshotPlanner` at line 3 of `/tmp/ipykernel_6827/4014978636.py`, \u001b[0m\u001b[96myou are using the following planning engine:\n",
       "\u001b[0m\u001b[96m  * Engine name: SymK\n",
       "  * Developers:  David Speck (cf. https://github.com/speckdavid/symk/blob/master/README.md )\n",
       "\u001b[0m\u001b[96m  * Description: \u001b[0m\u001b[96mSymK is a state-of-the-art domain-independent classical optimal and top-k planner.\u001b[0m\u001b[96m\n",
@@ -79,9 +79,9 @@
      "output_type": "stream",
      "text": [
       "\u001b[96m  *** Credits ***\n",
-      "\u001b[0m\u001b[96m  * In operation mode `AnytimePlanner` at line 5 of `/tmp/ipykernel_23211/3044654666.py`, \u001b[0m\u001b[96myou are using the following planning engine:\n",
+      "\u001b[0m\u001b[96m  * In operation mode `AnytimePlanner` at line 5 of `/tmp/ipykernel_6827/3044654666.py`, \u001b[0m\u001b[96myou are using the following planning engine:\n",
       "\u001b[0m\u001b[96m  * Engine name: SymK\n",
-      "  * Developers:  David Speck (cf. https://github.com/speckdavid/symk/blob/master/README.md)\n",
+      "  * Developers:  David Speck (cf. https://github.com/speckdavid/symk/blob/master/README.md )\n",
       "\u001b[0m\u001b[96m  * Description: \u001b[0m\u001b[96mSymK is a state-of-the-art domain-independent classical optimal and top-k planner.\u001b[0m\u001b[96m\n",
       "\u001b[0m\u001b[96m\n",
       "\u001b[0mPlan 1: [pick(ball2, rooma, right), pick(ball1, rooma, left), move(rooma, roomb), drop(ball2, roomb, right), drop(ball1, roomb, left), move(roomb, rooma), pick(ball3, rooma, left), pick(ball4, rooma, right), move(rooma, roomb), drop(ball3, roomb, left), drop(ball4, roomb, right)] with cost 11.\n",
@@ -111,6 +111,50 @@
     "            plans_by_cost[cost].append(result.plan)\n",
     "            print(f\"Plan {i+1}: {result.plan} with cost {cost}.\")\n",
     "            print()\n",
+    "        elif result.status in unified_planning.engines.results.POSITIVE_OUTCOMES:\n",
+    "            assert len(plans_by_cost) == 1\n",
+    "            for cost, plans in plans_by_cost.items():\n",
+    "                print(f\"{planner.name} found {len(plans)} optimal plans with cost {cost}.\")\n",
+    "        elif result.status not in unified_planning.engines.results.POSITIVE_OUTCOMES:\n",
+    "            print(\"No plan found.\") "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "69c01782",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[96m  *** Credits ***\n",
+      "\u001b[0m\u001b[96m  * In operation mode `AnytimePlanner` at line 5 of `/tmp/ipykernel_6827/3484865700.py`, \u001b[0m\u001b[96myou are using the following planning engine:\n",
+      "\u001b[0m\u001b[96m  * Engine name: SymK\n",
+      "  * Developers:  David Speck (cf. https://github.com/speckdavid/symk/blob/master/README.md )\n",
+      "\u001b[0m\u001b[96m  * Description: \u001b[0m\u001b[96mSymK is a state-of-the-art domain-independent classical optimal and top-k planner.\u001b[0m\u001b[96m\n",
+      "\u001b[0m\u001b[96m\n",
+      "\u001b[0mSymK (with optimality guarantee) found 100 plans...\n",
+      "SymK (with optimality guarantee) found 200 plans...\n",
+      "SymK (with optimality guarantee) found 300 plans...\n",
+      "SymK (with optimality guarantee) found 384 optimal plans with cost 11.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Query an anytime planner with OPTIMAL_PLANS guarantee and generate all optimal plans => SymK\n",
+    "\n",
+    "plans_by_cost = defaultdict(lambda: [])\n",
+    "\n",
+    "with AnytimePlanner(problem_kind=pddl_problem.kind, anytime_guarantee=\"OPTIMAL_PLANS\") as planner:\n",
+    "    for i, result in enumerate(planner.get_solutions(pddl_problem)): # output_stream=sys.stdout): \n",
+    "        if result.status == up.engines.PlanGenerationResultStatus.INTERMEDIATE:\n",
+    "            pv_res = pv.validate(pddl_problem, result.plan)\n",
+    "            cost = pv_res.metric_evaluations[pddl_problem.quality_metrics[0]]\n",
+    "            plans_by_cost[cost].append(result.plan)\n",
+    "            if i > 0 and i % 100 == 0:\n",
+    "                print(f\"{planner.name} found {i} plans...\")\n",
     "        elif result.status in unified_planning.engines.results.POSITIVE_OUTCOMES:\n",
     "            assert len(plans_by_cost) == 1\n",
     "            for cost, plans in plans_by_cost.items():\n",
