new anytime planner interface

--- a/notebooks/symk_usage.ipynb
+++ b/notebooks/symk_usage.ipynb
@@ -45,12 +45,23 @@
      "text": [
       "\u001b[96m\u001b[1mNOTE: To disable printing of planning engine credits, add this line to your code: `up.shortcuts.get_environment().credits_stream = None`\n",
       "\u001b[0m\u001b[96m  *** Credits ***\n",
-      "\u001b[0m\u001b[96m  * In operation mode `OneshotPlanner` at line 3 of `/tmp/ipykernel_27645/4014978636.py`, \u001b[0m\u001b[96myou are using the following planning engine:\n",
+      "\u001b[0m\u001b[96m  * In operation mode `OneshotPlanner` at line 3 of `/tmp/ipykernel_79480/4014978636.py`, \u001b[0m\u001b[96myou are using the following planning engine:\n",
       "\u001b[0m\u001b[96m  * Engine name: SymK\n",
       "  * Developers:  David Speck (cf. https://github.com/speckdavid/symk/blob/master/README.md )\n",
       "\u001b[0m\u001b[96m  * Description: \u001b[0m\u001b[96mSymK is a state-of-the-art domain-independent classical optimal and top-k planner.\u001b[0m\u001b[96m\n",
       "\u001b[0m\u001b[96m\n",
-      "\u001b[0mSymK found this plan: [pick(ball2, rooma, right), pick(ball1, rooma, left), move(rooma, roomb), drop(ball2, roomb, right), drop(ball1, roomb, left), move(roomb, rooma), pick(ball3, rooma, left), pick(ball4, rooma, right), move(rooma, roomb), drop(ball3, roomb, left), drop(ball4, roomb, right)] with cost 11.\n"
+      "\u001b[0mSymK found this plan: SequentialPlan:\n",
+      "    pick(ball2, rooma, right)\n",
+      "    pick(ball1, rooma, left)\n",
+      "    move(rooma, roomb)\n",
+      "    drop(ball1, roomb, left)\n",
+      "    drop(ball2, roomb, right)\n",
+      "    move(roomb, rooma)\n",
+      "    pick(ball3, rooma, left)\n",
+      "    pick(ball4, rooma, right)\n",
+      "    move(rooma, roomb)\n",
+      "    drop(ball3, roomb, left)\n",
+      "    drop(ball4, roomb, right) with cost 11.\n"
      ]
     }
    ],
@@ -78,20 +89,75 @@
      "output_type": "stream",
      "text": [
       "\u001b[96m  *** Credits ***\n",
-      "\u001b[0m\u001b[96m  * In operation mode `AnytimePlanner` at line 5 of `/tmp/ipykernel_27645/3044654666.py`, \u001b[0m\u001b[96myou are using the following planning engine:\n",
+      "\u001b[0m\u001b[96m  * In operation mode `AnytimePlanner` at line 5 of `/tmp/ipykernel_79480/3044654666.py`, \u001b[0m\u001b[96myou are using the following planning engine:\n",
       "\u001b[0m\u001b[96m  * Engine name: SymK\n",
       "  * Developers:  David Speck (cf. https://github.com/speckdavid/symk/blob/master/README.md )\n",
       "\u001b[0m\u001b[96m  * Description: \u001b[0m\u001b[96mSymK is a state-of-the-art domain-independent classical optimal and top-k planner.\u001b[0m\u001b[96m\n",
       "\u001b[0m\u001b[96m\n",
-      "\u001b[0mPlan 1: [pick(ball2, rooma, right), pick(ball1, rooma, left), move(rooma, roomb), drop(ball2, roomb, right), drop(ball1, roomb, left), move(roomb, rooma), pick(ball3, rooma, left), pick(ball4, rooma, right), move(rooma, roomb), drop(ball3, roomb, left), drop(ball4, roomb, right)] with cost 11.\n",
+      "\u001b[0mPlan 1: SequentialPlan:\n",
+      "    pick(ball2, rooma, right)\n",
+      "    pick(ball1, rooma, left)\n",
+      "    move(rooma, roomb)\n",
+      "    drop(ball2, roomb, right)\n",
+      "    drop(ball1, roomb, left)\n",
+      "    move(roomb, rooma)\n",
+      "    pick(ball3, rooma, left)\n",
+      "    pick(ball4, rooma, right)\n",
+      "    move(rooma, roomb)\n",
+      "    drop(ball3, roomb, left)\n",
+      "    drop(ball4, roomb, right) with cost 11.\n",
       "\n",
-      "Plan 2: [pick(ball2, rooma, right), pick(ball1, rooma, left), move(rooma, roomb), drop(ball2, roomb, right), drop(ball1, roomb, left), move(roomb, rooma), pick(ball3, rooma, left), pick(ball4, rooma, right), move(rooma, roomb), drop(ball4, roomb, right), drop(ball3, roomb, left)] with cost 11.\n",
+      "Plan 2: SequentialPlan:\n",
+      "    pick(ball2, rooma, right)\n",
+      "    pick(ball1, rooma, left)\n",
+      "    move(rooma, roomb)\n",
+      "    drop(ball2, roomb, right)\n",
+      "    drop(ball1, roomb, left)\n",
+      "    move(roomb, rooma)\n",
+      "    pick(ball3, rooma, left)\n",
+      "    pick(ball4, rooma, right)\n",
+      "    move(rooma, roomb)\n",
+      "    drop(ball4, roomb, right)\n",
+      "    drop(ball3, roomb, left) with cost 11.\n",
       "\n",
-      "Plan 3: [pick(ball2, rooma, right), pick(ball1, rooma, left), move(rooma, roomb), drop(ball2, roomb, right), drop(ball1, roomb, left), move(roomb, rooma), pick(ball3, rooma, right), pick(ball4, rooma, left), move(rooma, roomb), drop(ball3, roomb, right), drop(ball4, roomb, left)] with cost 11.\n",
+      "Plan 3: SequentialPlan:\n",
+      "    pick(ball2, rooma, right)\n",
+      "    pick(ball1, rooma, left)\n",
+      "    move(rooma, roomb)\n",
+      "    drop(ball2, roomb, right)\n",
+      "    drop(ball1, roomb, left)\n",
+      "    move(roomb, rooma)\n",
+      "    pick(ball3, rooma, right)\n",
+      "    pick(ball4, rooma, left)\n",
+      "    move(rooma, roomb)\n",
+      "    drop(ball3, roomb, right)\n",
+      "    drop(ball4, roomb, left) with cost 11.\n",
       "\n",
-      "Plan 4: [pick(ball2, rooma, right), pick(ball1, rooma, left), move(rooma, roomb), drop(ball2, roomb, right), drop(ball1, roomb, left), move(roomb, rooma), pick(ball3, rooma, right), pick(ball4, rooma, left), move(rooma, roomb), drop(ball4, roomb, left), drop(ball3, roomb, right)] with cost 11.\n",
+      "Plan 4: SequentialPlan:\n",
+      "    pick(ball2, rooma, right)\n",
+      "    pick(ball1, rooma, left)\n",
+      "    move(rooma, roomb)\n",
+      "    drop(ball2, roomb, right)\n",
+      "    drop(ball1, roomb, left)\n",
+      "    move(roomb, rooma)\n",
+      "    pick(ball3, rooma, right)\n",
+      "    pick(ball4, rooma, left)\n",
+      "    move(rooma, roomb)\n",
+      "    drop(ball4, roomb, left)\n",
+      "    drop(ball3, roomb, right) with cost 11.\n",
       "\n",
-      "Plan 5: [pick(ball2, rooma, right), pick(ball1, rooma, left), move(rooma, roomb), drop(ball2, roomb, right), drop(ball1, roomb, left), move(roomb, rooma), pick(ball4, rooma, right), pick(ball3, rooma, left), move(rooma, roomb), drop(ball3, roomb, left), drop(ball4, roomb, right)] with cost 11.\n",
+      "Plan 5: SequentialPlan:\n",
+      "    pick(ball2, rooma, right)\n",
+      "    pick(ball1, rooma, left)\n",
+      "    move(rooma, roomb)\n",
+      "    drop(ball2, roomb, right)\n",
+      "    drop(ball1, roomb, left)\n",
+      "    move(roomb, rooma)\n",
+      "    pick(ball4, rooma, right)\n",
+      "    pick(ball3, rooma, left)\n",
+      "    move(rooma, roomb)\n",
+      "    drop(ball3, roomb, left)\n",
+      "    drop(ball4, roomb, right) with cost 11.\n",
       "\n",
       "SymK (with optimality guarantee) found 5 optimal plans with cost 11.\n"
      ]
@@ -129,12 +195,13 @@
      "output_type": "stream",
      "text": [
       "\u001b[96m  *** Credits ***\n",
-      "\u001b[0m\u001b[96m  * In operation mode `AnytimePlanner` at line 5 of `/tmp/ipykernel_27645/3484865700.py`, \u001b[0m\u001b[96myou are using the following planning engine:\n",
+      "\u001b[0m\u001b[96m  * In operation mode `AnytimePlanner` at line 5 of `/tmp/ipykernel_79480/3535417708.py`, \u001b[0m\u001b[96myou are using the following planning engine:\n",
       "\u001b[0m\u001b[96m  * Engine name: SymK\n",
       "  * Developers:  David Speck (cf. https://github.com/speckdavid/symk/blob/master/README.md )\n",
       "\u001b[0m\u001b[96m  * Description: \u001b[0m\u001b[96mSymK is a state-of-the-art domain-independent classical optimal and top-k planner.\u001b[0m\u001b[96m\n",
       "\u001b[0m\u001b[96m\n",
-      "\u001b[0mSymK (with optimality guarantee) found 100 plans...\n",
+      "\u001b[0mSymK (with optimality guarantee)\n",
+      "SymK (with optimality guarantee) found 100 plans...\n",
       "SymK (with optimality guarantee) found 200 plans...\n",
       "SymK (with optimality guarantee) found 300 plans...\n",
       "SymK (with optimality guarantee) found 384 optimal plans with cost 11.\n"
@@ -147,6 +214,7 @@
     "plans_by_cost = defaultdict(lambda: [])\n",
     "\n",
     "with AnytimePlanner(problem_kind=pddl_problem.kind, anytime_guarantee=\"OPTIMAL_PLANS\") as planner:\n",
+    "    print(planner.name)\n",
     "    for i, result in enumerate(planner.get_solutions(pddl_problem)): # output_stream=sys.stdout): \n",
     "        if result.status == up.engines.PlanGenerationResultStatus.INTERMEDIATE:\n",
     "            pv_res = pv.validate(pddl_problem, result.plan)\n",
@@ -173,7 +241,7 @@
      "output_type": "stream",
      "text": [
       "\u001b[96m  *** Credits ***\n",
-      "\u001b[0m\u001b[96m  * In operation mode `AnytimePlanner` at line 5 of `/tmp/ipykernel_27645/685317883.py`, \u001b[0m\u001b[96myou are using the following planning engine:\n",
+      "\u001b[0m\u001b[96m  * In operation mode `AnytimePlanner` at line 5 of `/tmp/ipykernel_79480/685317883.py`, \u001b[0m\u001b[96myou are using the following planning engine:\n",
       "\u001b[0m\u001b[96m  * Engine name: SymK\n",
       "  * Developers:  David Speck (cf. https://github.com/speckdavid/symk/blob/master/README.md )\n",
       "\u001b[0m\u001b[96m  * Description: \u001b[0m\u001b[96mSymK is a state-of-the-art domain-independent classical optimal and top-k planner.\u001b[0m\u001b[96m\n",
